--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,8 +3,19 @@
     color: blueviolet;
 }
 */
+/*@media (max-width="1024px") {
+    body 
+        {width: 100%;}
+    
+}/*
+
+/*html, body {
+    min-height: 100%;
+    width: 1024px;
+}*/
 head {
     font-family: 'Arima Madurai', cursive;
+    
 }
 *{
     margin: 0;
@@ -12,38 +23,55 @@ head {
 }
 body {  font-family: 'Arima Madurai', cursive;}
 
-ul {list-style:none ;}
-li {list-style: none;}
+ul {list-style:none;
+}
+li {list-style: none;
+line-height: 30pt;
+
+}
+
+.lista{
+    column-gap: 30px;
+    column-count: 3;
+}
+
 .cabecera {
-    background-color: aquamarine; 
-    padding-top: 10px;
-    padding-bottom: 10px;
-    width: 125%;
+    background-color: rgb(175, 241, 219); 
+    padding-top: 20px;
+    padding-bottom: 50px;
+    width: 100%;
     box-shadow: 0 2px 6px rgba(0,0, 0, 0.5);
 
     position: 10;
-    top: 65;
+    top: 80;
     left: 50;
-    z-index: 1500; 
+    z-index: 1000; 
 
 }
 .contenedor { 
     max-width: 100%;
-    margin: 0% ;
-    display: table-cell ;
-    justify-content: space-between;
-    align-items:flex-end;
+    margin: 20px ;
+    padding: 0px;
+    top: 600pt;
+    display: flow-root;
+    justify-content:center;
+    text-align: center;
+    line-height: 30pt;
+    align-items:center;
+    width: 100%;
+
 }
 .contenido {
-    width: 50%;
+    width: 100%;
+    
 }
 .titulobanner1 {
-    font-size: 50%;
+    font-size: 100%;
     color: rgba(0,0, 0, 0.5);
     margin-bottom: 32px;
 }
 .entrada {
-    color:darkmagenta ;
+    color:rgb(216, 225, 240) ;
     font-size: 45px;
 }
 .subtitulo {
@@ -59,7 +87,7 @@ li {list-style: none;}
 }
 .navegador__link {
     text-decoration: none;
-    color: deeppink;
+    color: rgb(19, 86, 211);
     font-size: 14px;
 }
 .navegacion__lista{
@@ -76,21 +104,32 @@ li {list-style: none;}
     font-size: 40px;
     color: black;
 }
-.carrucel{
+.carrusel{
     
     margin-left: auto;
     margin-right: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 650px;
-    height: 650px;
+    width: 750px;
+    height: 750px;
 }
+.carrusel1{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 750px;
+    height: 750px;
+
+}
+
     .button-container a{
     position:relative;
     bottom:0em;
     right:-2em;
-    background-color: rgb(179, 120, 219);
+    background-color: rgb(176, 240, 234);
     color:white;
     font-size:1em;
     padding:1em 1.5em;
@@ -99,3 +138,60 @@ li {list-style: none;}
     border-radius:1.5em;
     }
     
+.foto{
+        
+  height:500px ;
+    }
+.button-menu a{
+        position:relative;
+        margin: 10px;
+        padding: 30px;
+        border-radius: 50px;
+        justify-content: center;
+        bottom:0em;
+        right:-2em;
+        background-color: rgb(164, 71, 226);
+        color:white;
+        font-size:1em;
+        padding:1em 1.5em;
+        text-transform:uppercase;
+        border-color:rgb(100, 164, 218);
+        border-radius:1.5em;
+        }
+
+.foto-inicial{
+    width: 100%;
+    height: 500px;
+    
+}
+
+.footers{
+    width: 100%;
+    background-color: rgb(103, 223, 231);
+    text-align: center;}
+
+#product{
+    padding-bottom: 25px;
+    padding: 10px;
+    column-gap: 30px;
+    column-count: 4;
+    margin-left: 20%;
+}
+.titulopro{
+    color: blueviolet;
+    font-size: 50px;
+    text-align: center;
+    background-color:rgb(103, 223, 231);
+    margin: 50px;
+    border: 3px solid rgb(189, 165, 206)
+}
+
+.formu{
+    border: 3px solid black
+}
+/*.ult{
+    display: grid;
+    gap: 1em;
+    grid-template-columns: repeat (2,1fr);
+    grid-template-rows: auto;
+}/*
